# arc-reactor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml
SPEC/: 01-project-overview.md  02-architecture-overview.md  03-backend-spec.md  04-frontend-spec.md  05-agentic-features-spec.md  06-data-model-spec.md  07-integration-spec.md  08-security-spec.md  09-deployment-spec.md  10-ux-spec.md  11-conf-spec.md  12-recovery-spec.md  13-run-ops.md  AGENT-SPEC.md  ARCHITECTURE-OVERVIEW.md  BACKEND-SPEC.md  CONFIG-SPEC.md  DATA-MODEL-SPEC.md  (+6 more)
backend/: GEMINI.md  README.md  config.py  context.py  dependencies.py  main.py  pyproject.toml  settings.yaml
backend/agents/: __init__.py  checkpointer.py  model.py  pipeline_agent.py  prompts.py  streaming.py
backend/agents/middleware/: __init__.py  hitl.py  large_output.py  summarization.py
backend/agents/subagents/: __init__.py  benchling_expert.py  config_expert.py
backend/agents/tools/: __init__.py  base.py  benchling_discovery.py  entity_tools.py  file_generation.py  ngs_discovery.py  pipeline_tools.py  schema_tools.py  submission.py
backend/api/routes/: __init__.py  benchling.py  chat.py  chat_rest.py  health.py  logs.py  pipelines.py  runs.py  tasks.py
backend/api/routes/internal/: __init__.py  reconcile.py  weblog.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_schema.py
backend/models/: __init__.py  checkpoints.py  runs.py  tasks.py  users.py  weblog_event_log.py
backend/models/schemas/: __init__.py  logs.py  pipelines.py  runs.py
backend/services/: batch.py  benchling.py  checkpointer.py  database.py  gemini.py  logs.py  pipelines.py  run_events.py  runs.py  storage.py  users.py
backend/tests/: conftest.py  test_auth_oidc.py  test_batch_service.py  test_benchling_discovery_tools.py  test_benchling_service.py  test_chat_rest.py  test_chat_websocket.py  test_checkpointer_service.py  test_entity_tools.py  test_health.py  test_internal_routes.py  test_ngs_tools.py  test_orchestrator_scripts.py  test_pipeline_tools.py  test_run_submission_flow.py  test_runs_service.py  test_storage_service.py  test_submission_tools.py  test_tasks_routes.py  test_users_service.py  test_weblog_models.py
backend/tests/fixtures/scrnaseq/: nextflow.config  params.yaml
backend/tests/integration/: test_integrations.py
backend/utils/: auth.py  circuit_breaker.py  errors.py
(+97 files in other folders)
