[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-reactor-backend"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "dynaconf>=3.2.4",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "google-cloud-batch>=0.17.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-secret-manager>=2.20.0",
    "langchain>=1.1.0,<2.0.0",
    "langchain-google-genai>=1.0.0",
    "benchling-py @ git+https://github.com/arcinstitute/benchling-py.git@main",
    "circuitbreaker>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
